@@ -1,62 +1,85 @@
 package io.stargate.sgv2.jsonapi.api.model.command.clause.sort;
 
 import com.datastax.oss.driver.api.core.CqlIdentifier;
-import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
-import io.stargate.sgv2.jsonapi.api.model.command.deserializers.SortClauseDeserializer;
 import io.stargate.sgv2.jsonapi.config.constants.DocumentConstants;
-import io.stargate.sgv2.jsonapi.exception.ErrorCodeV1;
-import io.stargate.sgv2.jsonapi.service.processor.SchemaValidatable;
+import io.stargate.sgv2.jsonapi.exception.SortException;
 import io.stargate.sgv2.jsonapi.service.projection.IndexingProjector;
 import io.stargate.sgv2.jsonapi.service.schema.collections.CollectionSchemaObject;
 import jakarta.validation.Valid;
-import java.util.List;
-import java.util.Map;
-import org.eclipse.microprofile.openapi.annotations.enums.SchemaType;
-import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import java.util.*;
 
 /**
  * Internal model for the sort clause that can be used in the commands.
  *
  * @param sortExpressions Ordered list of sort expressions.
  */
-@JsonDeserialize(using = SortClauseDeserializer.class)
-@Schema(
-    type = SchemaType.OBJECT,
-    implementation = Map.class,
-    example =
-        """
-              {"user.age" : -1, "user.name" : 1}
-              """)
-public record SortClause(@Valid List<SortExpression> sortExpressions) implements SchemaValidatable {
+public record SortClause(@Valid List<SortExpression> sortExpressions) {
+  public SortClause {
+    sortExpressions = Objects.requireNonNull(sortExpressions, "sortExpressions cannot be null");
+  }
+
+  /**
+   * Factory method to create a single-expression immutable {@link SortClause}: to be used for most
+   * cases of "specialized" sort clauses, such as lexical or vector sorts.
+   *
+   * @param sortExpression Sort expression to use in the clause, must not be null.
+   */
+  public static SortClause immutable(SortExpression sortExpression) {
+    Objects.requireNonNull(sortExpression, "sortExpression cannot be null");
+    return new SortClause(Collections.singletonList(sortExpression));
+  }
+
+  /**
+   * Specialized factory method to create a single-expression {@link SortClause} that is
+   * <b>mutable</b>: this is unfortunately needed to support the legacy Vectorize handling.
+   *
+   * @param sortExpression Sort expression to use in the clause, must not be null.
+   */
+  public static SortClause mutable(SortExpression sortExpression) {
+    Objects.requireNonNull(sortExpression, "sortExpression cannot be null");
+    List<SortExpression> sortExpressions = new ArrayList<>(1);
+    sortExpressions.add(sortExpression);
+    return new SortClause(sortExpressions);
+  }
+
+  public static SortClause empty() {
+    return new SortClause(Collections.emptyList());
+  }
 
   public boolean isEmpty() {
-    return sortExpressions == null || sortExpressions.isEmpty();
+    return sortExpressions.isEmpty();
   }
 
   /** Get the sort expressions that are trying to vector sort columns on a table */
   public List<SortExpression> tableVectorSorts() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
-        : sortExpressions.stream().filter(SortExpression::isTableVectorSort).toList();
+        : sortExpressions.stream()
+            .filter(
+                sortExpression ->
+                    sortExpression.isTableVectorSort() || sortExpression.isTableVectorizeSort())
+            .toList();
   }
 
   /** Get the sort expressions that are not trying to vector sort columns on a table */
   public List<SortExpression> nonTableVectorSorts() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream()
-            .filter(sortExpression -> !sortExpression.isTableVectorSort())
+            .filter(
+                sortExpression ->
+                    !sortExpression.isTableVectorSort() && !sortExpression.isTableVectorizeSort())
             .toList();
   }
 
   public List<CqlIdentifier> sortColumnIdentifiers() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream().map(SortExpression::pathAsCqlIdentifier).toList();
   }
 
   public List<SortExpression> tableVectorizeSorts() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream().filter(SortExpression::isTableVectorizeSort).toList();
   }
@@ -72,22 +95,28 @@ public record SortClause(@Valid List<SortExpression> sortExpressions) implements
   }
 
   public boolean hasVsearchClause() {
-    return sortExpressions != null
-        && !sortExpressions.isEmpty()
-        && sortExpressions.get(0).path().equals(DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD);
+    return !sortExpressions.isEmpty() && sortExpressions.getFirst().hasVector();
   }
 
   public boolean hasVectorizeSearchClause() {
-    return sortExpressions != null
-        && !sortExpressions.isEmpty()
-        && sortExpressions
-            .get(0)
-            .path()
-            .equals(DocumentConstants.Fields.VECTOR_EMBEDDING_TEXT_FIELD);
+    return !sortExpressions.isEmpty() && sortExpressions.getFirst().hasVectorize();
   }
 
-  @Override
+  public SortExpression lexicalSortExpression() {
+    if (sortExpressions.size() != 1) {
+      return null;
+    }
+    SortExpression expr = sortExpressions.getFirst();
+    return expr.isLexicalSort() ? expr : null;
+  }
+
   public void validate(CollectionSchemaObject collection) {
+    // First things first: Lexical/BM25 search uses its own index; also the only expression
+    // (validated during SortClauseBuilder.buildAndValidate())
+    if (lexicalSortExpression() != null) {
+      return;
+    }
+
     IndexingProjector indexingProjector = collection.indexingProjector();
     // If nothing specified, everything indexed
     if (indexingProjector.isIdentityProjection()) {
@@ -95,20 +124,25 @@ public record SortClause(@Valid List<SortExpression> sortExpressions) implements
     }
     // validate each path in sortExpressions
     for (SortExpression sortExpression : sortExpressions) {
-      if (!indexingProjector.isPathIncluded(sortExpression.path())) {
-        throw ErrorCodeV1.UNINDEXED_SORT_PATH.toApiException(
-            "sort path '%s' is not indexed", sortExpression.path());
+      if (!indexingProjector.isPathIncluded(sortExpression.getPath())) {
+        throw SortException.Code.SORT_CLAUSE_PATH_UNINDEXED.get(
+            Map.of("path", sortExpression.getPath()));
       }
       // `SortClauseDeserializer` looks for binary value and adds it as SortExpression irrespective
       // of field name to support ANN search for tables. There is no access to SchemaObject in the
       // deserializer, so added a validation to check in case of collection.
 
-      if (!(DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD.equals(sortExpression.path())
-              || DocumentConstants.Fields.VECTOR_EMBEDDING_TEXT_FIELD.equals(sortExpression.path()))
-          && sortExpression.vector() != null) {
-        throw ErrorCodeV1.INVALID_SORT_CLAUSE.toApiException(
-            "Sorting by embedding vector values for the collection requires `%s` field. Provided field name: `%s`.",
-            DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD, sortExpression.path());
+      if (!(DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD.equals(sortExpression.getPath())
+              || DocumentConstants.Fields.VECTOR_EMBEDDING_TEXT_FIELD.equals(
+                  sortExpression.getPath()))
+          && sortExpression.hasVector()) {
+        throw SortException.Code.SORT_CLAUSE_INVALID.get(
+            Map.of(
+                "problem",
+                "sorting by embedding vector values for the collection requires `%s` field. Provided field name: '%s'"
+                    .formatted(
+                        DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD,
+                        sortExpression.getPath())));
       }
     }
   }
