@@ -4,16 +4,14 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Multimap;
 import io.smallrye.mutiny.tuples.Tuple3;
-import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
-import io.stargate.sgv2.jsonapi.api.model.command.CommandResultBuilder;
-import io.stargate.sgv2.jsonapi.api.model.command.CommandStatus;
+import io.stargate.sgv2.jsonapi.api.model.command.*;
+import io.stargate.sgv2.jsonapi.api.model.command.tracing.RequestTracing;
+import io.stargate.sgv2.jsonapi.exception.APIException;
 import io.stargate.sgv2.jsonapi.service.shredding.collections.DocumentId;
-import io.stargate.sgv2.jsonapi.util.ExceptionUtil;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * This represents the response for a delete operation.
@@ -24,12 +22,11 @@ import java.util.stream.Collectors;
  * @param moreData - if `true` means more documents available in DB for the provided condition
  */
 public record DeleteOperationPage(
-    List<Tuple3<Boolean, Throwable, ReadDocument>> deletedInformation,
+    List<Tuple3<Boolean, APIException, ReadDocument>> deletedInformation,
     boolean moreData,
     boolean returnDocument,
     boolean singleDocument)
     implements Supplier<CommandResult> {
-  private static final String ERROR = "Failed to delete documents with _id %s: %s";
 
   @Override
   public CommandResult get() {
@@ -39,23 +36,22 @@ public record DeleteOperationPage(
     // when we move to use OperationAttempt for the collection commands we can refactor
     if (deletedInformation == null) {
       // when returnDocument is set this means we are runnning findOneAndDelete, so we have to
-      // return a
-      // data and documents section
+      // return a data and documents section
       // aaron - this is a giant hack 21 oct 2024
       if (returnDocument()) {
         if (singleDocument()) {
-          return CommandResult.singleDocumentBuilder(false, false)
+          return CommandResult.singleDocumentBuilder(RequestTracing.NO_OP)
               .addStatus(CommandStatus.DELETED_COUNT, 0)
               .addDocument(null)
               .build();
         } else {
-          return CommandResult.multiDocumentBuilder(false, false)
+          return CommandResult.multiDocumentBuilder(RequestTracing.NO_OP)
               .addStatus(CommandStatus.DELETED_COUNT, 0)
               .addDocument(null)
               .build();
         }
       } else {
-        return CommandResult.statusOnlyBuilder(false, false)
+        return CommandResult.statusOnlyBuilder(RequestTracing.NO_OP)
             .addStatus(CommandStatus.DELETED_COUNT, -1)
             .build();
       }
@@ -69,7 +65,7 @@ public record DeleteOperationPage(
     List<JsonNode> deletedDoc = new ArrayList<>();
 
     // aggregate the errors by error code or error class
-    Multimap<String, Tuple3<Boolean, Throwable, ReadDocument>> groupedErrorDeletes =
+    Multimap<String, Tuple3<Boolean, APIException, ReadDocument>> groupedErrorDeletes =
         ArrayListMultimap.create();
     deletedInformation.forEach(
         deletedData -> {
@@ -77,26 +73,26 @@ public record DeleteOperationPage(
             deletedDoc.add(deletedData.getItem3().get());
           }
           if (deletedData.getItem2() != null) {
-            String key = ExceptionUtil.getThrowableGroupingKey(deletedData.getItem2());
-            groupedErrorDeletes.put(key, deletedData);
+            groupedErrorDeletes.put(deletedData.getItem2().code, deletedData);
           }
         });
 
     // Create error by error code or error class
-    List<CommandResult.Error> errors = new ArrayList<>(groupedErrorDeletes.size());
+    List<CommandError> errors = new ArrayList<>(groupedErrorDeletes.size());
+
     groupedErrorDeletes
         .keySet()
         .forEach(
             key -> {
-              final Collection<Tuple3<Boolean, Throwable, ReadDocument>> deletedDocuments =
+              Collection<Tuple3<Boolean, APIException, ReadDocument>> deletedDocuments =
                   groupedErrorDeletes.get(key);
-              final List<DocumentId> documentIds =
+              List<DocumentId> documentIds =
                   deletedDocuments.stream()
                       .map(deletes -> deletes.getItem3().id().orElseThrow())
-                      .collect(Collectors.toList());
+                      .toList();
               errors.add(
-                  ExceptionUtil.getError(
-                      ERROR, documentIds, deletedDocuments.stream().findFirst().get().getItem2()));
+                  CommandErrorFactory.create(
+                      deletedDocuments.stream().findFirst().get().getItem2(), documentIds));
             });
 
     // return the result
@@ -107,19 +103,19 @@ public record DeleteOperationPage(
     CommandResultBuilder builder = null;
     if (returnDocument()) {
       if (singleDocument()) {
-        builder = CommandResult.singleDocumentBuilder(false, false);
+        builder = CommandResult.singleDocumentBuilder(RequestTracing.NO_OP);
       } else {
-        builder = CommandResult.multiDocumentBuilder(false, false);
+        builder = CommandResult.multiDocumentBuilder(RequestTracing.NO_OP);
       }
       // aaron - ok to add the list to the builder as I assume there will only be one id single doc
       // return.
       // the builder will fail if we created single doc and then added more than one
       builder.addDocuments(deletedDoc);
     } else {
-      builder = CommandResult.statusOnlyBuilder(false, false);
+      builder = CommandResult.statusOnlyBuilder(RequestTracing.NO_OP);
     }
 
-    builder.addStatus(CommandStatus.DELETED_COUNT, deletedCount).addCommandResultError(errors);
+    builder.addStatus(CommandStatus.DELETED_COUNT, deletedCount).addCommandError(errors);
     if (moreData) {
       builder.addStatus(CommandStatus.MORE_DATA, true);
     }
