@@ -1,13 +1,17 @@
 package io.stargate.sgv2.jsonapi.service.operation.collections;
 
+import static io.stargate.sgv2.jsonapi.exception.ErrorFormatters.errVars;
+
 import com.datastax.oss.driver.api.core.cql.SimpleStatement;
 import com.fasterxml.jackson.databind.JsonNode;
 import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandContext;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
-import io.stargate.sgv2.jsonapi.api.request.DataApiRequestInfo;
-import io.stargate.sgv2.jsonapi.exception.ErrorCodeV1;
+import io.stargate.sgv2.jsonapi.api.request.RequestContext;
+import io.stargate.sgv2.jsonapi.exception.APIException;
+import io.stargate.sgv2.jsonapi.exception.DatabaseException;
+import io.stargate.sgv2.jsonapi.exception.unchecked.LWTFailureException;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.QueryExecutor;
 import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CQLBindValues;
 import io.stargate.sgv2.jsonapi.service.embedding.DataVectorizerService;
@@ -18,6 +22,7 @@ import io.stargate.sgv2.jsonapi.service.shredding.collections.DocumentId;
 import io.stargate.sgv2.jsonapi.service.shredding.collections.DocumentShredder;
 import io.stargate.sgv2.jsonapi.service.shredding.collections.WritableShreddedDocument;
 import io.stargate.sgv2.jsonapi.service.updater.DocumentUpdater;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
@@ -57,8 +62,8 @@ public record ReadAndUpdateCollectionOperation(
 
   @Override
   public Uni<Supplier<CommandResult>> execute(
-      DataApiRequestInfo dataApiRequestInfo, QueryExecutor queryExecutor) {
-    final AtomicReference pageStateReference = new AtomicReference();
+      RequestContext dataApiRequestInfo, QueryExecutor queryExecutor) {
+    final AtomicReference<String> pageStateReference = new AtomicReference<>();
     final AtomicInteger matchedCount = new AtomicInteger(0);
     final AtomicInteger modifiedCount = new AtomicInteger(0);
     Uni<CollectionReadOperation.FindResponse> docsToUpdate =
@@ -71,16 +76,14 @@ public record ReadAndUpdateCollectionOperation(
             findResponse -> {
               pageStateReference.set(findResponse.pageState());
               final List<ReadDocument> docs = findResponse.docs();
-              if (upsert() && docs.size() == 0 && matchedCount.get() == 0) {
+              if (upsert() && docs.isEmpty() && matchedCount.get() == 0) {
                 // TODO: creating the new document here, with the defaults from the filter, makes it
-                // harder because
-                // the new document created here may nto have an _id if there was none in the
-                // filter. A better approach
-                // may be to have the documentUpdater create the upsert document totally in once
-                // place. Currently creating the
-                // upsert document is in multiple places. To do this we would create
-                // UpdateOperations from the filter and
-                // give them to the document updated when it is created.
+                // harder because the new document created here may nto have an _id if there was
+                // none in the filter. A better approach may be to have the documentUpdater create
+                // the upsert document totally in once place.
+                // Currently creating to upsert document is in multiple places. To do this we would
+                // create UpdateOperations from the filter and give them to the document updated
+                // when it is created.
                 return Multi.createFrom().item(findCollectionOperation().getNewDocument());
               } else {
                 matchedCount.addAndGet(docs.size());
@@ -91,7 +94,7 @@ public record ReadAndUpdateCollectionOperation(
         .transformToUniAndConcatenate(
             readDocument ->
                 processUpdate(dataApiRequestInfo, readDocument, queryExecutor, modifiedCount)
-                    .onFailure(LWTException.class)
+                    .onFailure(LWTFailureException.class)
                     .recoverWithUni(
                         () -> {
                           // Retry `retryLimit` times in case of LWT failure
@@ -112,7 +115,7 @@ public record ReadAndUpdateCollectionOperation(
                                                     queryExecutor,
                                                     modifiedCount));
                                   })
-                              .onFailure(LWTException.class)
+                              .onFailure(LWTFailureException.class)
                               .retry()
                               // because it's already run twice before this
                               // check.
@@ -120,8 +123,16 @@ public record ReadAndUpdateCollectionOperation(
                               .onFailure()
                               .recoverWithItem(
                                   error -> {
+                                    // AJM - GH #2309 - this means we failed all retries to get the
+                                    // LWT to apply
+                                    // we now need to create the error to return to the user, and we
+                                    // track these
+                                    // per document we are trying to update.
+                                    var dbError =
+                                        DatabaseException.Code.FAILED_CONCURRENT_OPERATIONS.get(
+                                            errVars(commandContext().schemaObject()));
                                     return new UpdatedDocument(
-                                        readDocument.id().orElseThrow(), false, null, error);
+                                        readDocument.id().orElseThrow(), false, null, dbError);
                                   });
                         }))
         .collect()
@@ -132,22 +143,27 @@ public record ReadAndUpdateCollectionOperation(
               // create json doc read/write metrics
               commandContext
                   .jsonProcessingMetricsReporter()
-                  .reportJsonReadDocsMetrics(commandContext().commandName(), matchedCount.get());
+                  .reportJsonReadDocsMetrics(
+                      commandContext().requestContext().tenant(),
+                      commandContext().commandName(),
+                      matchedCount.get());
               commandContext
                   .jsonProcessingMetricsReporter()
                   .reportJsonWrittenDocsMetrics(
-                      commandContext().commandName(), modifiedCount.get());
+                      commandContext().requestContext().tenant(),
+                      commandContext().commandName(),
+                      modifiedCount.get());
               return new UpdateCollectionOperationPage(
                   matchedCount.get(),
                   modifiedCount.get(),
                   updates,
                   returnDocumentInResponse(),
-                  (String) pageStateReference.get());
+                  pageStateReference.get());
             });
   }
 
   private Uni<UpdatedDocument> processUpdate(
-      DataApiRequestInfo dataApiRequestInfo,
+      RequestContext dataApiRequestInfo,
       ReadDocument document,
       QueryExecutor queryExecutor,
       AtomicInteger modifiedCount) {
@@ -170,10 +186,7 @@ public record ReadAndUpdateCollectionOperation(
 
               return documentUpdaterResponse
                   .updateEmbeddingVector(
-                      documentUpdaterResponse,
-                      dataVectorizerService,
-                      dataApiRequestInfo,
-                      commandContext)
+                      documentUpdaterResponse, dataVectorizerService, commandContext)
                   .onItem()
                   .transformToUni(
                       vectorizedDocumentUpdaterResponse -> {
@@ -202,7 +215,8 @@ public record ReadAndUpdateCollectionOperation(
                                     vectorizedDocumentUpdaterResponse.document(),
                                     readDocument
                                         .txnId()
-                                        .orElse(null)); // will be empty when this is a upsert'd doc
+                                        .orElse(
+                                            null)); // will be empty when this is an upserted doc
 
                         // Have to do this because shredder adds _id field to the document if it
                         // doesn't exist
@@ -244,14 +258,18 @@ public record ReadAndUpdateCollectionOperation(
   }
 
   private Uni<DocumentId> updatedDocument(
-      DataApiRequestInfo dataApiRequestInfo,
+      RequestContext dataApiRequestInfo,
       QueryExecutor queryExecutor,
       WritableShreddedDocument writableShreddedDocument) {
+    final boolean vectorEnabled = commandContext().schemaObject().vectorConfig().vectorEnabled();
+    final boolean lexicalEnabled = commandContext().schemaObject().lexicalConfig().enabled();
+
     final SimpleStatement updateQuery =
         bindUpdateValues(
-            buildUpdateQuery(commandContext().schemaObject().vectorConfig().vectorEnabled()),
+            buildUpdateQuery(vectorEnabled, lexicalEnabled),
             writableShreddedDocument,
-            commandContext().schemaObject().vectorConfig().vectorEnabled());
+            vectorEnabled,
+            lexicalEnabled);
     return queryExecutor
         .executeWrite(dataApiRequestInfo, updateQuery)
         .onItem()
@@ -260,106 +278,91 @@ public record ReadAndUpdateCollectionOperation(
               if (result.wasApplied()) {
                 return Uni.createFrom().item(writableShreddedDocument.id());
               } else {
-                throw new LWTException(ErrorCodeV1.CONCURRENCY_FAILURE);
+                throw new LWTFailureException(updateQuery);
               }
             });
   }
 
-  private String buildUpdateQuery(boolean vectorEnabled) {
+  private String buildUpdateQuery(boolean vectorEnabled, boolean lexicalEnabled) {
+    var identifier = commandContext.schemaObject().identifier();
+    return buildUpdateQuery(
+        identifier.keyspace().asInternal(),
+        identifier.table().asInternal(),
+        vectorEnabled,
+        lexicalEnabled);
+  }
+
+  // NOTE: This method is used in the test code (to avoid having to copy query Strings verbatim),
+  // so it should not be changed to private or non-static
+  static String buildUpdateQuery(
+      String keyspaceName, String collectionName, boolean vectorEnabled, boolean lexicalEnabled) {
+    StringBuilder updateQuery = new StringBuilder(200);
+    updateQuery
+        .append("UPDATE \"")
+        .append(keyspaceName)
+        .append("\".\"")
+        .append(collectionName)
+        .append("\" SET ")
+        .append(
+            """
+                tx_id = now(),
+                exist_keys = ?,
+                array_size = ?,
+                array_contains = ?,
+                query_bool_values = ?,
+                query_dbl_values = ?,
+                query_text_values = ?,
+                query_null_values = ?,
+                query_timestamp_values = ?,
+                """);
     if (vectorEnabled) {
-      String update =
-          "UPDATE \"%s\".\"%s\" "
-              + "        SET"
-              + "            tx_id = now(),"
-              + "            exist_keys = ?,"
-              + "            array_size = ?,"
-              + "            array_contains = ?,"
-              + "            query_bool_values = ?,"
-              + "            query_dbl_values = ?,"
-              + "            query_text_values = ?,"
-              + "            query_null_values = ?,"
-              + "            query_timestamp_values = ?,"
-              + "            query_vector_value = ?,"
-              + "            doc_json  = ?"
-              + "        WHERE "
-              + "            key = ?"
-              + "        IF "
-              + "            tx_id = ?";
-      return String.format(
-          update,
-          commandContext.schemaObject().name().keyspace(),
-          commandContext.schemaObject().name().table());
-    } else {
-      String update =
-          "UPDATE \"%s\".\"%s\" "
-              + "        SET"
-              + "            tx_id = now(),"
-              + "            exist_keys = ?,"
-              + "            array_size = ?,"
-              + "            array_contains = ?,"
-              + "            query_bool_values = ?,"
-              + "            query_dbl_values = ?,"
-              + "            query_text_values = ?,"
-              + "            query_null_values = ?,"
-              + "            query_timestamp_values = ?,"
-              + "            doc_json  = ?"
-              + "        WHERE "
-              + "            key = ?"
-              + "        IF "
-              + "            tx_id = ?";
-      return String.format(
-          update,
-          commandContext.schemaObject().name().keyspace(),
-          commandContext.schemaObject().name().table());
+      updateQuery.append("\nquery_vector_value = ?,");
     }
+    if (lexicalEnabled) {
+      updateQuery.append("\nquery_lexical_value = ?,");
+    }
+    updateQuery.append(
+        """
+            doc_json  = ?
+            WHERE key = ?
+            IF tx_id = ?
+            """);
+
+    return updateQuery.toString();
   }
 
   protected static SimpleStatement bindUpdateValues(
-      String builtQuery, WritableShreddedDocument doc, boolean vectorEnabled) {
-    // respect the order in the DocsApiConstants.ALL_COLUMNS_NAMES
+      String builtQuery,
+      WritableShreddedDocument doc,
+      boolean vectorEnabled,
+      boolean lexicalEnabled) {
+    // Note: must match the order in query string constructed with `buildUpdateQuery()`
+    // Build dynamically due to number of permutations
+    List<Object> positional = new ArrayList<>(16); // from 12 to 14 entries currently
+
+    positional.add(CQLBindValues.getSetValue(doc.existKeys()));
+    positional.add(CQLBindValues.getIntegerMapValues(doc.arraySize()));
+    positional.add(CQLBindValues.getStringSetValue(doc.arrayContains()));
+    positional.add(CQLBindValues.getBooleanMapValues(doc.queryBoolValues()));
+    positional.add(CQLBindValues.getDoubleMapValues(doc.queryNumberValues()));
+    positional.add(CQLBindValues.getStringMapValues(doc.queryTextValues()));
+    positional.add(CQLBindValues.getSetValue(doc.queryNullValues()));
+    positional.add(CQLBindValues.getTimestampMapValues(doc.queryTimestampValues()));
     if (vectorEnabled) {
-      return SimpleStatement.newInstance(
-          builtQuery,
-          CQLBindValues.getSetValue(doc.existKeys()),
-          CQLBindValues.getIntegerMapValues(doc.arraySize()),
-          CQLBindValues.getStringSetValue(doc.arrayContains()),
-          CQLBindValues.getBooleanMapValues(doc.queryBoolValues()),
-          CQLBindValues.getDoubleMapValues(doc.queryNumberValues()),
-          CQLBindValues.getStringMapValues(doc.queryTextValues()),
-          CQLBindValues.getSetValue(doc.queryNullValues()),
-          CQLBindValues.getTimestampMapValues(doc.queryTimestampValues()),
-          CQLBindValues.getVectorValue(doc.queryVectorValues()),
-          doc.docJson(),
-          CQLBindValues.getDocumentIdValue(doc.id()),
-          doc.txID());
-    } else {
-      return SimpleStatement.newInstance(
-          builtQuery,
-          CQLBindValues.getSetValue(doc.existKeys()),
-          CQLBindValues.getIntegerMapValues(doc.arraySize()),
-          CQLBindValues.getStringSetValue(doc.arrayContains()),
-          CQLBindValues.getBooleanMapValues(doc.queryBoolValues()),
-          CQLBindValues.getDoubleMapValues(doc.queryNumberValues()),
-          CQLBindValues.getStringMapValues(doc.queryTextValues()),
-          CQLBindValues.getSetValue(doc.queryNullValues()),
-          CQLBindValues.getTimestampMapValues(doc.queryTimestampValues()),
-          doc.docJson(),
-          CQLBindValues.getDocumentIdValue(doc.id()),
-          doc.txID());
+      positional.add(CQLBindValues.getVectorValue(doc.queryVectorValues()));
     }
+    if (lexicalEnabled) {
+      positional.add(doc.queryLexicalValue());
+    }
+    positional.add(doc.docJson());
+    positional.add(CQLBindValues.getDocumentIdValue(doc.id()));
+    positional.add(doc.txID());
+    return SimpleStatement.newInstance(builtQuery, positional.toArray(new Object[0]));
   }
 
-  /**
-   * Utility method to read the document again, in case of lwt error
-   *
-   * @param queryExecutor
-   * @param prevReadDoc
-   * @return
-   */
+  /** Utility method to read the document again, in case of lwt error */
   private Uni<ReadDocument> readDocumentAgain(
-      DataApiRequestInfo dataApiRequestInfo,
-      QueryExecutor queryExecutor,
-      ReadDocument prevReadDoc) {
+      RequestContext dataApiRequestInfo, QueryExecutor queryExecutor, ReadDocument prevReadDoc) {
     return findCollectionOperation()
         .getDocuments(
             dataApiRequestInfo,
@@ -370,13 +373,17 @@ public record ReadAndUpdateCollectionOperation(
         .transform(
             response -> {
               if (!response.docs().isEmpty()) {
-                return response.docs().get(0);
-              } else {
-                // If data changed and doesn't satisfy filter conditions
-                return null;
+                return response.docs().getFirst();
               }
+              // If data changed and doesn't satisfy filter conditions
+              return null;
             });
   }
 
-  record UpdatedDocument(DocumentId id, boolean upserted, JsonNode document, Throwable error) {}
+  /**
+   * Container for the status of updating a document, callers should wrap any throwable that is not
+   * a {@link APIException} into a {@link
+   * io.stargate.sgv2.jsonapi.exception.ServerException.Code#UNEXPECTED_SERVER_ERROR}
+   */
+  record UpdatedDocument(DocumentId id, boolean upserted, JsonNode document, APIException error) {}
 }
